# MonkeyTyper

./: .gitignore  CMakeLists.txt  Enums.hpp  LICENSE.txt  main.cpp  words.txt
Class/: Banan.cpp  Banan.hpp  Button.cpp  Button.hpp  Font.cpp  Font.hpp  Text.cpp  Text.hpp
Sceneries/: Author.cpp  Author.hpp  Game.cpp  Game.hpp  Menu.cpp  Menu.hpp  PreGame.cpp  PreGame.hpp  Settings.cpp  Settings.hpp
